--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   },
   "homepage": "https://github.com/jaroslawkrol/peseljs#readme",
   "devDependencies": {
+    "@types/jasmine": "^2.8.2",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-typescript": "^3.0.8",
     "typescript": "^2.5.3"
   }
 }
