--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["es2015", "es2017"],
+    "target": "es6",
+    "lib": ["es2015", "es2016", "es2017"],
     "module": "commonjs",
     "declaration": true,
     "outDir": "./dist",
