--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/jaroslawkrol/peseljs#readme",
   "devDependencies": {
     "@types/jasmine": "^2.8.2",
+    "coveralls": "^3.0.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
