--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "lib": ["es2015", "es2016", "es2017"],
+    "module": "es6",
+    "target": "es5",
+    "sourceMap": true,
+    "noImplicitAny": true,
     "module": "commonjs",
-    "declaration": true,
     "outDir": "./dist",
-    "strict": true
+    "strict": true,
+    "allowJs": true
   }
 }
