--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
   "compilerOptions": {
     "module": "es6",
     "target": "es5",
-    "sourceMap": true,
+    "declaration": true,
+    "sourceMap": false,
     "noImplicitAny": true,
     "module": "commonjs",
     "outDir": "./dist",
-    "strict": true,
-    "allowJs": true
+    "strict": true
   }
 }
