--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ install:
   - npm install
 script:
   - npm test
+sudo: required
+addons:
+    chrome: stable
 
 #sending coverage data to Coveralls
 after_script: cat coverage/*/lcov.info | node_modules/coveralls/bin/coveralls.js
